--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.6",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
